Fix horizontal resizer row overflow

--- a/codeocean/app/assets/stylesheets/editor.css.scss
+++ b/codeocean/app/assets/stylesheets/editor.css.scss
@@ -11,6 +11,8 @@
 
 #panel-left {
   position: relative;
+  max-height: 85vh;
+  overflow-y: scroll;
 }
 
 #panel-right {
